k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clientmanager-api

spec:
  selector:
    app: clientmanager-api

  ports:
    - port: 80
      targetPort: 8000

  type: ClusterIP
